<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="@dimen/button_text"
            tools:ignore="MissingClass"
            app:layout_constraintTop_toBottomOf="@+id/button_7" app:layout_constraintStart_toEndOf="@+id/button_4"
            app:layout_constraintEnd_toStartOf="@+id/button_6"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/buttonB" app:layout_constraintStart_toEndOf="@+id/button_5"
            app:layout_constraintEnd_toStartOf="@+id/buttonA"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A"
            android:textSize="@dimen/button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_6"
            app:layout_constraintStart_toEndOf="@+id/button_6" app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/G"
            android:textSize="@dimen/button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_3"
            app:layout_constraintStart_toEndOf="@+id/button_3" app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C"
            android:textSize="@dimen/button_text"
            app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="11dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_0"
            app:layout_constraintEnd_toStartOf="@+id/button_0"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/buttonG" app:layout_constraintStart_toEndOf="@+id/button_0"
            app:layout_constraintEnd_toStartOf="@+id/buttonE"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E"
            android:textSize="@dimen/button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonF" app:layout_constraintStart_toEndOf="@+id/buttonF"
            app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/button_1" app:layout_constraintStart_toEndOf="@+id/buttonC"
            app:layout_constraintEnd_toStartOf="@+id/buttonF"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/buttonA" app:layout_constraintStart_toEndOf="@+id/button_2"
            app:layout_constraintEnd_toStartOf="@+id/buttonG"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="@dimen/button_text"
            app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="11dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_5"
            app:layout_constraintEnd_toStartOf="@+id/button_5"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="@dimen/button_text"
            app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="11dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_2"
            app:layout_constraintEnd_toStartOf="@+id/button_2"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/button_4" app:layout_constraintStart_toEndOf="@+id/button_1"
            app:layout_constraintEnd_toStartOf="@+id/button_3"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D"
            android:textSize="@dimen/button_text"
            app:layout_constraintStart_toStartOf="@+id/buttonB" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="269dp"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B"
            android:textSize="@dimen/button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_9"
            app:layout_constraintStart_toEndOf="@+id/button_9" app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="@dimen/button_text"
            app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="11dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_8"
            app:layout_constraintEnd_toStartOf="@+id/button_8"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toTopOf="@+id/button_9" app:layout_constraintStart_toEndOf="@+id/button_7"
            app:layout_constraintEnd_toStartOf="@+id/button_9"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/buttonD" app:layout_constraintStart_toEndOf="@+id/button_8"
            app:layout_constraintEnd_toStartOf="@+id/buttonB"/>


</androidx.constraintlayout.widget.ConstraintLayout>